removed jar from repo and edited README.md